# test_perception

./: .gitignore  README.md  Xterm.log.ohashi-GB-BNi7HG6-1060.2019.10.08.14.50.29.2795  error_log.txt
matlab/: bagread.mlx
matlab/workspace/bag_player/: pointcloud_reader.mlx
matlab/workspace/footstep_analysis/: accelerationHighPassFilter.mlx  accelerationLowPassFilter.mlx  accelerationLowPassFilter.mlx.bkup  accelerationPeak2PeakCalculator.mlx  accelerationStepTimeDetector.mlx  generateAccelGround.mlx  generate_accel_ground.m  getPedestrianFromObjects.mlx  lpf  lpf.m  matlab.mat  pdrMeasurement.m  pdrPrediction.m  pedestrian_managed.m  pedestrian_step.m  read_bag.mlx  t_step_head.m  test_footStepAndroid.mlx  test_footStepMKS.mlx
matlab/workspace/phones_vehicle_fusion/: msgTypeCate2String.mlx  test_phonesVehicleFusion.mlx
run/: apolloCNN.sh  pointPillars.sh  run.sh  yolov3_beyondPixels.sh  yolov3_euclidian_fusion.sh  yolov3_frustum_detector.sh
src/: dataset
src/msgs/autoware_can_msgs/: CHANGELOG.rst
src/msgs/autoware_config_msgs/: CHANGELOG.rst
src/msgs/autoware_msgs/: CHANGELOG.rst  CMakeLists.txt
src/msgs/autoware_msgs/msg/: UkfStateArray.msg.bkup
src/msgs/dbw_mkz_msgs/msg/: WheelPositionReport.msg
src/msgs/msc_msgs/: CMakeLists.txt  package.xml
src/msgs/msc_msgs/msg/: Object.msg
src/run/: apolloCNN.sh  phone_localizer.sh  phone_vehicle_fusion.sh  phonesensors_raw.sh  pointPillars.sh  yolov3_beyondPixels.sh  yolov3_euclidian_fusion.sh
src/system/autoware_health_checker/src/: node_status_publisher.cpp
